--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@tanstack/react-table": "^8.21.3",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "use-local-storage-state": "^19.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
